tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/Import Color-Palettes - ID 82.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20130926 MrW Layout Bugfix
# 20130924 MrW A more user-friendly process, where the user is informed about what palettes will be imported, and which palettes will be merged
# 20130924 MrW Data format changed to tab, so that palettes can be transferred between fp7 and fmp12 formats.
# 20121101 MrW Nice!

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

# Script settings
Variable setzen [ $FolderPath ; Hole( DesktopPfad ) ]
Variable setzen [ $FileName ; "fmSyntaxColorizer-Palettes.txt" ]

# Var
Variable setzen [ $FilePath ; $FolderPath & $FileName ]


Blätternmodus aktivieren [ Pause: OFF ]
Fenster fixieren

# Import the palette names
Gehe zu Layout [ Layout: "A Import Palettes" ; Animation: Ohne ]
Datensätze importieren [ SSL-Zertifikate verifizieren: OFF ; Mit Dialog: OFF ; ⚠️ PARAMETER "DataSourceReference" NOT PARSED ⚠️ ; ⚠️ PARAMETER "ImportField" NOT PARSED ⚠️ ]
Variable setzen [ $error ; Hole( LetzteFehlerNr ) ]
Wenn [ $error ]
	# Error
	Eigenes Dialogfeld anzeigen [ Title: Hole( ScriptName ) ; Message: "Please first place a valid fmSyntaxColorizer export file " & Zitat( $FileName ) & " on the desktop!" ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Aktuelles Script verlassen []
	# -->
Ende (wenn)

# Remove duplicates and initialise the import check box
Sortieren [ Mit Dialog: OFF ; ⚠️ PARAMETER "Restore" NOT PARSED ⚠️ ; ⚠️ PARAMETER "SortSpecification" NOT PARSED ⚠️ ]
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Schleife (Anfang) [ Flush: Immer ]
	Wenn [ Hole( DatensatzPositionInErgebnismenge ) =1 ODER
					HoleNtenDatensatz( _Color::PaletteName ; Hole( DatensatzPositionInErgebnismenge ) -1 ) ≠ _Color::PaletteName ]
		Feldwert setzen [ _Color::Temp ; Falls( Color.Palette_byName::_k1 = 1 ; "" ; 1 ) ]
		Gehe zu Datens./Abfrage/Seite [ Nächste(r) ; Nach letztem beenden: ON ]
	Sonst
		Variable setzen [ $ExitAfterLast ; Hole( DatensatzPositionInErgebnismenge ) = Hole( AnzahlGefundeneDatensätze ) ]
		Datensatz/Abfrage löschen [ Mit Dialog: OFF ]
		Verlasse Schleife wenn [ $ExitAfterLast ]
	Ende (wenn)
Schleife (Ende)


Variable setzen [ $$LastMessageChoice ; 1 /* default = import */ ]
Schleife (Anfang) [ Flush: Immer ]
	Blätternmodus aktivieren [ Pause: ON ]
	Verlasse Schleife wenn [ NICHT IstLeer( $$LastMessageChoice ) ]
	# Return pressed
Schleife (Ende)
Fenster fixieren
Wenn [ $$LastMessageChoice = 2 ]
	# Cancel -> delete all temp records and go back
	Alle Datensätze löschen [ Mit Dialog: OFF ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Aktuelles Script verlassen []
	# -->
Ende (wenn)

# Remove the records which are not to be imported
Variable setzen [ $PaletteNames ; "" ]
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Schleife (Anfang) [ Flush: Immer ]
	Wenn [ _Color::Temp = 1 ]
		Variable setzen [ $PaletteNames ; Liste( $PaletteNames ; _Color::PaletteName ) ]
		Gehe zu Datens./Abfrage/Seite [ Nächste(r) ; Nach letztem beenden: ON ]
	Sonst
		Variable setzen [ $ExitAfterLast ; Hole( DatensatzPositionInErgebnismenge ) = Hole( AnzahlGefundeneDatensätze ) ]
		Datensatz/Abfrage löschen [ Mit Dialog: OFF ]
		Verlasse Schleife wenn [ $ExitAfterLast ]
	Ende (wenn)
Schleife (Ende)

Wenn [ Hole( AnzahlGefundeneDatensätze ) = 0 ]
	# Nothing to import
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Aktuelles Script verlassen []
	# -->
Ende (wenn)


# Select palette-colors to be merged (whilst removing the temp-records)
Gehe zu Bezugsdatensatz [ Table: Color.Palette_byName ; Layout: "Palettes" ; Show related ; Match found set ]
Wenn [ Hole( LayoutTabellenname ) ≠ "_Palette" ]
	# No common palettes
	Gehe zu Layout [ Layout: "A Import Palettes" ; Animation: Ohne ]
	Alle Datensätze löschen [ Mit Dialog: OFF ]
	Alle Datensätze anzeigen
	Nur Ausgeschlossene anzeigen
Sonst
	# Common palettes to merge...
	Gehe zu Layout [ Layout: "A Import Palettes" ; Animation: Ohne ]
	Alle Datensätze löschen [ Mit Dialog: OFF ]
	Gehe zu Layout [ Layout: "Palettes" ; Animation: Ohne ]
	Gehe zu Bezugsdatensatz [ Table: Palette.Color ; Layout: "A Import Palettes" ; Show related ; Match found set ]
	Wenn [ Hole( LayoutTabellenname ) ≠ "_Color" ]
		# …but no common colors
		Gehe zu Layout [ Layout: "A Import Palettes" ; Animation: Ohne ]
		Alle Datensätze anzeigen
		Nur Ausgeschlossene anzeigen
	Ende (wenn)
Ende (wenn)


# Set palette names for merge import
Ersetze alle Feldwerte [ _Color::PaletteName ; Durch Berechnung ersetzen: Color.Palette_byID::PaletteName ]


# Import Colors(Match + add, with automatic)
// Datensätze importieren [ SSL-Zertifikate verifizieren: OFF ; Mit Dialog: OFF ; ⚠️ PARAMETER "DataSourceReference" NOT PARSED ⚠️ ; ⚠️ PARAMETER "ImportField" NOT PARSED ⚠️ ]
Datensätze importieren [ SSL-Zertifikate verifizieren: OFF ; Mit Dialog: OFF ; ⚠️ PARAMETER "DataSourceReference" NOT PARSED ⚠️ ; ⚠️ PARAMETER "ImportField" NOT PARSED ⚠️ ]
Variable setzen [ $error ; Hole( LetzteFehlerNr ) ]
Wenn [ $error ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Eigenes Dialogfeld anzeigen [ Title: Hole( ScriptName ) ; Message: Falls(
					$error = 100 ; "File missing! Please first place file " & Zitat( $FileName ) & " on the desktop!" ;
					"Error " & $error & " during the import."
					) ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ]
	Aktuelles Script verlassen []
	# -->
Ende (wenn)

Wenn [ Hole( AnzahlGefundeneDatensätze ) = 0 ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Eigenes Dialogfeld anzeigen [ Title: Hole( ScriptName ) ; Message: "Nothing was imported! Better luck next time!" ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ]
	Aktuelles Script verlassen []
	# -->
Ende (wenn)

# Remove the records which are not to be imported
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Schleife (Anfang) [ Flush: Immer ]
	Wenn [ NICHT IstLeer( FilterElemente( _Color::PaletteName ; $PaletteNames ) ) ]
		Gehe zu Datens./Abfrage/Seite [ Nächste(r) ; Nach letztem beenden: ON ]
	Sonst
		Variable setzen [ $ExitAfterLast ; Hole( DatensatzPositionInErgebnismenge ) = Hole( AnzahlGefundeneDatensätze ) ]
		Datensatz/Abfrage löschen [ Mit Dialog: OFF ]
		Verlasse Schleife wenn [ $ExitAfterLast ]
	Ende (wenn)
Schleife (Ende)


Wenn [ Hole( AnzahlGefundeneDatensätze ) = 0 ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Eigenes Dialogfeld anzeigen [ Title: Hole( ScriptName ) ; Message: "Nothing was imported! Better luck next time!" ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ]
	Aktuelles Script verlassen []
	# -->
Ende (wenn)


# Create Palettes as necessary and use the LOCAL IDs to connect
# FOR EACH Color
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Schleife (Anfang) [ Flush: Immer ]
	Feldwert setzen [ _Color::ColorInput ; TextFarbe ( _Color::_kkFullBlock ; RGB ( WörterLinks( _Color::Temp ; 1 )  ; WörterMitte( _Color::Temp ; 2 ; 1 ) ; WörterMitte( _Color::Temp ; 3 ; 1 ) ) ) ]
	Feldwert setzen [ _Color::Temp ; "" ]
	# Create the Palette record, if necessary
	Wenn [ IstLeer( Color.Palette_byName::__ID ) ]
		Feldwert setzen [ Color.Palette_byName::PaletteName ; _Palette::PaletteName ]
		Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
	Ende (wenn)
	# And connect using the LOCAL ID
	Feldwert setzen [ _Color::_ID_Palette ; Color.Palette_byName::__ID ]
	Feldwert setzen [ _Color::PaletteName ; "" ]
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
	
	# NEXT Color
	Gehe zu Datens./Abfrage/Seite [ Nächste(r) ; Nach letztem beenden: ON ]
Schleife (Ende)

# Show the imported palettes
Gehe zu Bezugsdatensatz [ Table: Color.Palette_byID ; Layout: "Palettes" ; Show related ; Match found set ]
Gehe zu Layout [ Layout: "Palettes" ; Animation: Ohne ]

Variable setzen [ $n ; Hole( AnzahlGefundeneDatensätze ) ]
Wenn [ $n = 1 ]
	Alle Datensätze anzeigen
	Datensätze zeigen als [ Als Formular anzeigen ]
Sonst
	Datensätze zeigen als [ Als Tabelle anzeigen ]
Ende (wenn)
Eigenes Dialogfeld anzeigen [ Title: Hole( ScriptName ) ; Message: Falls( $n = 1 ; "One color-palette has been" ; $n & " color-palettes have been" ) & " successfully imported." ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ]
