tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/OnEnterObject PaletteName #T# - ID 86.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20121101 MrW From Script trigger

Wenn [ Hole ( LayoutAnzeigeAlsStatus ) = 2 ]
	Variable setzen [ $Start ; Hole ( AktiveTextAuswahlStart ) ]
	Variable setzen [ $Len ; Hole ( AktiveTextAuswahlGröße ) ]
	Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️
	Auswahl festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "130" ] ⚠️⚠️⚠️
Ende (wenn)
