tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/OnObjectModify _kIsActivePalette #T# - ID 85.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20121101 MrW From Script trigger

Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Fenster aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "80" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Apply Palette" ]
Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
