tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/Read and Edit Palette.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20210916 MrW Removed lingering pesky German :D
# 20121102 MrW 

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

Schleife (Anfang)
	Wenn [ NICHT IstLeer( Palette.Color_Formula::Comment ) ]
		# Read
		Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
		Verlasse Schleife wenn [ Hole ( LetzteMeldungswahl ) = 1 ]
	Ende (wenn)
	# Edit
	Variable setzen [ $Comment ; Palette.Color_Formula::Comment ]
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Verlasse Schleife wenn [ IstLeer( Palette.Color_Formula::Comment ) ODER Palette.Color_Formula::Comment = $Comment ]
Schleife (Ende)
