tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/Set Color( Field ) - ID 51.txt.snap
---
source: src/main.rs
expression: output_content
---
Gehe zu Feld [ Auswählen/Ausführen ; Syntax.Color::ColorInput ]
AppleScript ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "67" ] ⚠️⚠️⚠️
