tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/Show Current Palette - ID 224.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20200528 MrW

Blätternmodus aktivieren [ Pause: OFF ]


Gehe zu Layout [ Layout: "Palettes" ; Animation: Ohne ]
Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️

# Find active palette
Suchenmodus aktivieren [ Pause: OFF ]
Feldwert setzen [ _Palette::_kIsActivePalette ; 1 ]
Ergebnismenge suchen
Wenn [ Hole( AnzahlGefundeneDatensätze ) = 0 ]
	Alle Datensätze anzeigen
	Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Ende (wenn)
Script ausführen [ Aus Liste ; "All" ]
Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️
